# bifurcation-analyser

./: .gitignore  CMakeLists.txt  README.md  capd_error.h  main.cpp  main.h  makefile  manual.cpp  manual.h  neuron.cpp  neuron.h  print_state.cpp  print_state.h  rectangles.py  small_funcs.cpp  small_funcs.h  solvers.cpp  solvers.h
